<resources>
    <string name="app_name">p1eijd</string>
    <string name="titulo0">TECNOLOGICO DE ESTUDIOS SUPERIORES DEL ORIENTE DEL ESTADO DE MEXICO</string>
    <string name="titulo1">INGENIERIA EN SISTEMAS COMPUTACIONALES</string>
    <string name="titulo2">JIMENEZ DELGADO EDSON IVAN</string>
    <string name="titulo3">INTRODUCCION A DISPOSITIVOS MOVILES</string>
    <string name="titulo4">7S11</string>
    <string name="titulo5">\"166010039\"</string>
    <string name="titulo6">Victor Hugo de la O Martinez</string>
    <string name="img">tesoem</string>
</resources>
